--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -24,16 +24,16 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/image_leftMenu"
+                    android:id="@+id/imageBell"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:src="@drawable/start_bell_on" />
 
                 <ImageView
-                    android:id="@+id/image_leftArrow"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:id="@+id/imageBack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_arrow_back_white_24dp"
                     android:visibility="gone" />
@@ -53,9 +53,9 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="로그인"
                     android:textColor="#ffffff"
-                    android:textSize="17dp"
+                    android:textSize="18.85dp"
+                    android:fontFamily="@font/malgunfont"
                     android:textStyle="bold" />
             </LinearLayout>
 
