--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -15,7 +15,7 @@
             android:background="?attr/colorPrimary">
 
             <LinearLayout
-                android:id="@+id/image_menu2"
+                android:id="@+id/loLeftIcon"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="15dp"
@@ -24,7 +24,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageBell"
+                    android:id="@+id/ivBell"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -60,7 +60,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/image_menu"
+                android:id="@+id/loMenu"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginRight="15dp"
@@ -68,6 +68,7 @@
                 android:gravity="center">
 
                 <ImageView
+                    android:id="@+id/ivMenu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
