--- a/app/src/main/res/layout/custom_navigation_item.xml
+++ b/app/src/main/res/layout/custom_navigation_item.xml
@@ -78,6 +78,46 @@
                 app:layout_constraintLeft_toLeftOf="@+id/image_exit"
                 app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
+            <!-- 레이아웃 -->
+            <LinearLayout
+                android:id="@+id/layoutLogin"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/layout_login"
+                app:layout_constraintBottom_toBottomOf="@+id/layout_login"
+                app:layout_constraintRight_toRightOf="@+id/view"
+                android:orientation="horizontal" />
+
+            <LinearLayout
+                android:id="@+id/layoutRegister"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="@id/view"
+                app:layout_constraintTop_toTopOf="@+id/layout_login"
+                app:layout_constraintBottom_toBottomOf="@+id/layout_login"
+                app:layout_constraintRight_toRightOf="@+id/view1"
+                android:orientation="horizontal" />
+            <!-- 레이아웃 -->
+
+            <!-- 경계선 -->
+            <View
+                android:id="@+id/view"
+                android:layout_width="1dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toRightOf="@+id/image_login"
+                app:layout_constraintRight_toLeftOf="@+id/image_register"/>
+
+
+            <View
+                android:id="@+id/view1"
+                android:layout_width="1dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toRightOf="@+id/image_info"
+                app:layout_constraintRight_toLeftOf="@+id/image_customerService"/>
+
+            <!-- 경계선 -->
+
             <ImageView
                 android:id="@+id/image_login"
                 android:layout_width="wrap_content"
