--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,6 +20,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:scaleType="fitXY"
                     android:src="@drawable/main_bg" />
 
                 <LinearLayout
@@ -126,6 +127,7 @@
                             android:orientation="horizontal">
 
                             <ImageView
+                                android:id="@+id/ivSoloPay"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="3dp"
@@ -133,6 +135,7 @@
                                 android:src="@drawable/main_mn_btn01" />
 
                             <ImageView
+                                android:id="@+id/ivDutchPay"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="3dp"
@@ -194,5 +197,11 @@
                 </LinearLayout>
             </FrameLayout>
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layoutMain"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal" />
     </FrameLayout>
 </layout>
