--- a/app/src/main/res/layout/fragment_register_form.xml
+++ b/app/src/main/res/layout/fragment_register_form.xml
@@ -25,7 +25,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="47.42dp"
                 android:layout_marginTop="6dp"
@@ -35,22 +35,24 @@
                 android:paddingLeft="10.50dp"
                 android:textColorHint="#afafaf"
                 android:textSize="13.71dp"
+                android:inputType="textEmailAddress"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             <EditText
-                android:id="@+id/editText1"
+                android:id="@+id/etPassword"
                 android:layout_width="match_parent"
                 android:layout_height="47.42dp"
                 android:layout_marginTop="3.71dp"
                 android:background="#ffffff"
                 android:hint="@string/register_form_PWHintText"
+                android:inputType="textPassword"
                 android:paddingLeft="10.50dp"
                 android:textColorHint="#afafaf"
                 android:textSize="13.71dp"
-                app:layout_constraintTop_toBottomOf="@+id/editText" />
+                app:layout_constraintTop_toBottomOf="@+id/etEmail" />
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/etPasswordCheck"
                 android:layout_width="match_parent"
                 android:layout_height="47.42dp"
                 android:layout_marginTop="3.71dp"
@@ -58,22 +60,24 @@
                 android:fontFamily="@font/malgunfont"
                 android:hint="@string/register_form_PWCheckHintText"
                 android:paddingLeft="10.50dp"
+                android:inputType="textPassword"
                 android:textColorHint="#afafaf"
                 android:textSize="13.71dp"
-                app:layout_constraintTop_toBottomOf="@+id/editText1" />
+                app:layout_constraintTop_toBottomOf="@+id/etPassword" />
 
             <EditText
-                android:id="@+id/editText3"
+                android:id="@+id/etName"
                 android:layout_width="match_parent"
                 android:layout_height="47.42dp"
                 android:layout_marginTop="3.71dp"
                 android:background="#ffffff"
                 android:fontFamily="@font/malgunfont"
                 android:hint="@string/register_form_nameHintText"
+                android:maxLength="4"
                 android:paddingLeft="10.50dp"
                 android:textColorHint="#afafaf"
                 android:textSize="13.71dp"
-                app:layout_constraintTop_toBottomOf="@+id/editText2" />
+                app:layout_constraintTop_toBottomOf="@+id/etPasswordCheck" />
 
             <LinearLayout
                 android:id="@+id/linearLayout"
@@ -81,7 +85,7 @@
                 android:layout_height="47.42dp"
                 android:layout_marginTop="3.71dp"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@+id/editText3">
+                app:layout_constraintTop_toBottomOf="@+id/etName">
 
 
                 <LinearLayout
@@ -90,14 +94,16 @@
                     android:layout_weight="1">
 
                     <EditText
-                        android:id="@+id/editText4"
+                        android:id="@+id/etBirth"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_marginRight="10dp"
                         android:layout_weight="1"
                         android:background="#ffffff"
+                        android:inputType="number"
                         android:fontFamily="@font/malgunfont"
                         android:hint="@string/register_form_RRHintText"
+                        android:maxLength="6"
                         android:paddingLeft="10.50dp"
                         android:textColorHint="#afafaf"
                         android:textSize="13.71dp" />
@@ -116,20 +122,20 @@
                     android:layout_weight="1">
 
                     <EditText
-                        android:id="@+id/editText5"
+                        android:id="@+id/etFirstRN"
+                        android:inputType="number"
                         android:layout_width="0dp"
+                        android:background="#ffffff"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="10dp"
                         android:layout_weight="2"
-                        android:background="#ffffff"
                         android:fontFamily="@font/malgunfont"
+                        android:maxLength="1"
                         android:gravity="center"
                         android:hint="@string/register_form_RRbackHintText"
                         android:textColorHint="#afafaf"
                         android:textSize="13.71dp"
-                        app:layout_constraintLeft_toLeftOf="@+id/view"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+                        />
 
                     <TextView
                         android:layout_width="0dp"
@@ -140,10 +146,7 @@
                         android:fontFamily="@font/malgunfont"
                         android:text="@string/register_form_RRHideText"
                         android:textColor="#605f5f"
-                        android:textSize="25.14dp"
-                        app:layout_constraintBottom_toBottomOf="@+id/editText5"
-                        app:layout_constraintLeft_toRightOf="@+id/editText5"
-                        app:layout_constraintTop_toTopOf="@+id/editText5" />
+                        android:textSize="25.14dp" />
 
                 </LinearLayout>
 
@@ -158,7 +161,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
                 <EditText
-                    android:id="@+id/editText6"
+                    android:id="@+id/etPhone"
                     android:layout_width="0dp"
                     android:layout_height="47.42dp"
                     android:layout_weight="7"
@@ -167,6 +170,8 @@
                     android:hint="@string/register_form_phoneHintText"
                     android:paddingLeft="10.50dp"
                     android:textColorHint="#afafaf"
+                    android:inputType="number"
+                    android:maxLength="11"
                     android:textSize="13.71dp" />
 
                 <ImageView
@@ -179,13 +184,15 @@
             </LinearLayout>
 
             <EditText
-                android:id="@+id/editText7"
+                android:id="@+id/etCN"
                 android:layout_width="match_parent"
                 android:layout_height="47.42dp"
                 android:layout_marginTop="3.71dp"
                 android:background="#ffffff"
                 android:fontFamily="@font/malgunfont"
                 android:hint="@string/register_form_CNHintText"
+                android:inputType="number"
+                android:maxLength="6"
                 android:paddingLeft="10.50dp"
                 android:textColorHint="#afafaf"
                 android:textSize="13.71dp"
@@ -193,7 +200,7 @@
 
 
             <ImageView
-                android:id="@+id/btn_next"
+                android:id="@+id/btNext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="84.75dp"
