--- a/app/src/main/res/layout/fragment_register_payment_password.xml
+++ b/app/src/main/res/layout/fragment_register_payment_password.xml
@@ -10,7 +10,7 @@
         android:focusableInTouchMode="true">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/register_PaymentPassword_titleText"
@@ -21,10 +21,10 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginBottom="60dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView1" />
+            app:layout_constraintBottom_toTopOf="@+id/tvMiddleTitle" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/tvMiddleTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/register_PaymentPassword_middleText"
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_marginTop="11.42dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView1"
+            app:layout_constraintTop_toBottomOf="@+id/tvMiddleTitle"
             >
 
             <ImageView
