--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -38,6 +38,7 @@
             android:layout_marginRight="17.14dp"
             android:layout_marginTop="38.28dp"
             android:background="#ffffff"
+            android:inputType="textEmailAddress"
             android:hint="@string/login_IdHint"
             android:paddingLeft="10.50dp"
             android:fontFamily="@font/malgunfont"
@@ -58,6 +59,7 @@
             android:fontFamily="@font/malgunfont"
             android:textColorHint="#afafaf"
             android:layout_marginTop="3.42dp"
+            android:inputType="textPassword"
             android:textSize="13.71dp"
             android:layout_marginLeft="17.14dp"
             android:layout_marginRight="17.14dp"
