--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="mainActiviy"
-            type="com.dutch.hdh.dutchpayapp.ui.main.MainActivity" />
+            type="com.dutch.hdh.dutchpayapp.ui.main.activity.MainActivity" />
     </data>
 
     <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -37,9 +37,11 @@
                     android:layout_height="wrap_content"
                     android:fitsSystemWindows="true" />
 
-                <include
-                    android:id="@+id/fragment_main"
-                    layout="@layout/fragment_main"/>
+               <FrameLayout
+                   android:id="@+id/flFragmentContainer"
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:background="@color/layoutBG"/>
 
             </LinearLayout>
 
