--- a/app/src/main/res/layout/custom_navigation_item.xml
+++ b/app/src/main/res/layout/custom_navigation_item.xml
@@ -80,7 +80,7 @@
 
             <!-- 레이아웃 -->
             <LinearLayout
-                android:id="@+id/layoutLogin"
+                android:id="@+id/llLogin"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -90,13 +90,93 @@
                 android:orientation="horizontal" />
 
             <LinearLayout
-                android:id="@+id/layoutRegister"
+                android:id="@+id/llRegister"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintLeft_toLeftOf="@id/view"
                 app:layout_constraintTop_toTopOf="@+id/layout_login"
                 app:layout_constraintBottom_toBottomOf="@+id/layout_login"
                 app:layout_constraintRight_toRightOf="@+id/view1"
+                android:orientation="horizontal" />
+
+            <LinearLayout
+                android:id="@+id/llSolopayStart"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout2"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+                app:layout_constraintRight_toRightOf="@+id/view"
+                android:orientation="horizontal" />
+
+            <LinearLayout
+                android:id="@+id/llDutchpayStart"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="@id/view"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout2"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+                app:layout_constraintRight_toRightOf="@+id/view1"
+                android:orientation="horizontal" />
+
+            <LinearLayout
+                android:id="@+id/llEvent"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout3"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
+                app:layout_constraintRight_toRightOf="@+id/view"
+                android:orientation="horizontal" />
+
+            <LinearLayout
+                android:id="@+id/llMyGroup"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout4"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
+                app:layout_constraintRight_toRightOf="@+id/view"
+                android:orientation="horizontal" />
+
+            <LinearLayout
+                android:id="@+id/llMyWallet"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="@id/view"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout4"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
+                app:layout_constraintRight_toRightOf="@+id/view1"
+                android:orientation="horizontal" />
+
+            <LinearLayout
+                android:id="@+id/llNotice"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout5"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
+                app:layout_constraintRight_toRightOf="@+id/view"
+                android:orientation="horizontal" />
+
+            <LinearLayout
+                android:id="@+id/llService"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="@id/view"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout5"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
+                app:layout_constraintRight_toRightOf="@+id/view1"
+                android:orientation="horizontal" />
+
+            <LinearLayout
+                android:id="@+id/llCustomerCenter"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="@id/view1"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout5"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
+                app:layout_constraintRight_toRightOf="@+id/view2"
                 android:orientation="horizontal" />
             <!-- 레이아웃 -->
 
@@ -115,6 +195,13 @@
                 android:layout_height="0dp"
                 app:layout_constraintLeft_toRightOf="@+id/image_info"
                 app:layout_constraintRight_toLeftOf="@+id/image_customerService"/>
+
+            <View
+                android:id="@+id/view2"
+                android:layout_width="1dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toRightOf="@+id/view1"
+                app:layout_constraintRight_toRightOf="parent"/>
 
             <!-- 경계선 -->
 
