My 그룹 작업 완료
API 작업 요구

--- a/app/src/main/res/layout/fragment_my_group.xml
+++ b/app/src/main/res/layout/fragment_my_group.xml
@@ -35,6 +35,7 @@
             app:layout_constraintBottom_toBottomOf="parent" />
 
         <Button
+            android:id="@+id/btAddGroup"
             android:layout_width="match_parent"
             android:layout_height="47.42dp"
             android:layout_marginLeft="17.14dp"
