--- a/app/src/main/res/layout/fragment_my_group_edit.xml
+++ b/app/src/main/res/layout/fragment_my_group_edit.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/layoutBG">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/layoutBG">
 
 
         <EditText
             android:id="@+id/etGroupName"
             android:layout_width="match_parent"
             android:layout_height="47.42dp"
+            android:layout_marginLeft="17.14dp"
             android:layout_marginTop="22dp"
+            android:layout_marginRight="17.14dp"
             android:background="#ffffff"
             android:fontFamily="@font/malgunfont"
-            android:layout_marginLeft="17.14dp"
-            android:layout_marginRight="17.14dp"
             android:hint="그룹명을 입력해주세요."
+            android:inputType="text"
             android:includeFontPadding="false"
             android:paddingLeft="12dp"
             android:textColorHint="#afafaf"
@@ -26,12 +29,26 @@
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="17.14dp"
             android:layout_marginTop="31.42dp"
             android:fontFamily="@font/malgunfont"
-            android:layout_marginLeft="17.14dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:includeFontPadding="false"
             android:text="그룹 구성원 추가"
+            android:textColor="#1e1e1e"
+            android:textSize="15.42dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etGroupName" />
+
+        <TextView
+            android:id="@+id/tvPersonCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="17.14dp"
+            android:layout_marginTop="31.42dp"
+            android:fontFamily="@font/malgunfont"
+            android:text="( 0명 )"
+            app:layout_constraintLeft_toRightOf="@+id/tvTitle"
+            android:includeFontPadding="false"
             android:textColor="#1e1e1e"
             android:textSize="15.42dp"
             app:layout_constraintTop_toBottomOf="@+id/etGroupName" />
@@ -41,11 +58,12 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="17.14dp"
-            android:layout_marginRight="17.14dp"
             android:layout_marginTop="11.42dp"
+            android:layout_marginRight="17.14dp"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle">
 
             <Button
+                android:id="@+id/btTelephoneDirectory"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginRight="4dp"
@@ -59,6 +77,7 @@
                 android:textStyle="bold" />
 
             <Button
+                android:id="@+id/btDirectoryInput"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="4dp"
@@ -72,39 +91,39 @@
                 android:textStyle="bold" />
 
 
-
         </LinearLayout>
 
-    <ListView
-        android:id="@+id/lvPhoneList"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#ffffff"
-        android:layout_marginTop="14.85dp"
-        android:dividerHeight="0.5dp"
-        android:divider="@color/textDefault"
-        android:layout_marginBottom="17.14dp"
-        app:layout_constraintBottom_toTopOf="@+id/btComplete"
-        app:layout_constraintTop_toBottomOf="@+id/llButtons"></ListView>
+        <ListView
+            android:id="@+id/lvParticipantsList"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="14.85dp"
+            android:layout_marginBottom="17.14dp"
+            android:background="#ffffff"
+            android:divider="@color/textDefault"
+            android:dividerHeight="0.5dp"
+            app:layout_constraintBottom_toTopOf="@+id/btComplete"
+            app:layout_constraintTop_toBottomOf="@+id/llButtons"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#ffffff"
-        app:layout_constraintTop_toBottomOf="@+id/lvPhoneList"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-    <Button
-        android:id="@+id/btComplete"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="17.14dp"
-        android:layout_marginRight="17.14dp"
-        android:layout_marginBottom="17.14dp"
-        android:background="@color/buttonSelect"
-        android:textColor="@color/textSelect"
-        android:text="완료"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
-</android.support.constraint.ConstraintLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="#ffffff"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lvParticipantsList" />
+
+        <Button
+            android:id="@+id/btComplete"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="17.14dp"
+            android:layout_marginRight="17.14dp"
+            android:layout_marginBottom="17.14dp"
+            android:background="@color/buttonSelect"
+            android:text="완료"
+            android:textColor="@color/textSelect"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+</layout>
