--- a/app/src/main/res/layout/custom_navigation_item.xml
+++ b/app/src/main/res/layout/custom_navigation_item.xml
@@ -130,7 +130,7 @@
                 android:orientation="horizontal" />
 
             <LinearLayout
-                android:id="@+id/llMyGroup"
+                android:id="@+id/llMyPage"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -140,13 +140,23 @@
                 android:orientation="horizontal" />
 
             <LinearLayout
-                android:id="@+id/llMyWallet"
+                android:id="@+id/llMyGroup"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintLeft_toLeftOf="@id/view"
                 app:layout_constraintTop_toTopOf="@+id/linearLayout4"
                 app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
                 app:layout_constraintRight_toRightOf="@+id/view1"
+                android:orientation="horizontal" />
+
+            <LinearLayout
+                android:id="@+id/llMyWallet"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="@id/view1"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout4"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
+                app:layout_constraintRight_toRightOf="@+id/view2"
                 android:orientation="horizontal" />
 
             <LinearLayout
@@ -178,6 +188,8 @@
                 app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
                 app:layout_constraintRight_toRightOf="@+id/view2"
                 android:orientation="horizontal" />
+
+
             <!-- 레이아웃 -->
 
             <!-- 경계선 -->
@@ -185,8 +197,8 @@
                 android:id="@+id/view"
                 android:layout_width="1dp"
                 android:layout_height="0dp"
-                app:layout_constraintLeft_toRightOf="@+id/image_login"
-                app:layout_constraintRight_toLeftOf="@+id/image_register"/>
+                app:layout_constraintLeft_toRightOf="@+id/image_soloPay"
+                app:layout_constraintRight_toLeftOf="@+id/image_dutchPay"/>
 
 
             <View
@@ -355,17 +367,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
                 android:layout_marginTop="16.25dp"
-                android:src="@drawable/right_menu_off_my_group"
+                android:src="@drawable/right_menu_off_my_page"
                 app:layout_constraintLeft_toLeftOf="@+id/linearLayout4"
                 app:layout_constraintTop_toTopOf="@+id/linearLayout4" />
 
             <TextView
-                android:id="@+id/image_myGroup"
+                android:id="@+id/image_myPage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4.28dp"
                 android:fontFamily="@font/malgunfont"
-                android:text="My 그룹"
+                android:text="My 페이지"
                 android:textColor="#2a2a2a"
                 android:textSize="12.57dp"
                 app:layout_constraintLeft_toLeftOf="@+id/imageView10"
@@ -378,7 +390,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50.85dp"
                 android:layout_marginTop="16.25dp"
-                android:src="@drawable/right_menu_off_my_wallet"
+                android:src="@drawable/right_menu_off_my_group"
                 app:layout_constraintLeft_toRightOf="@+id/imageView10"
                 app:layout_constraintTop_toTopOf="@+id/linearLayout4" />
 
@@ -388,12 +400,34 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4.28dp"
                 android:fontFamily="@font/malgunfont"
-                android:text="My 지갑"
+                android:text="My 그룹"
                 android:textColor="#2a2a2a"
                 android:textSize="12.57dp"
                 app:layout_constraintLeft_toLeftOf="@+id/image_myWallet"
                 app:layout_constraintRight_toRightOf="@+id/image_myWallet"
                 app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+
+            <ImageView
+                android:id="@+id/ivasdd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50.85dp"
+                android:src="@drawable/right_menu_off_my_wallet"
+                app:layout_constraintLeft_toRightOf="@+id/image_myWallet"
+                app:layout_constraintTop_toTopOf="@+id/image_myWallet" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4.28dp"
+                android:fontFamily="@font/malgunfont"
+                android:text="My 지갑"
+                android:textColor="#2a2a2a"
+                android:textSize="12.57dp"
+                app:layout_constraintLeft_toLeftOf="@+id/ivasdd"
+                app:layout_constraintRight_toRightOf="@+id/ivasdd"
+                app:layout_constraintTop_toBottomOf="@+id/ivasdd" />
+
 
             <LinearLayout
                 android:id="@+id/linearLayout5"
