----추가 사항---- 1.공통 - 각각의 메소드마다 주석 추가. 2.공통 - 화면 비율에 따라 늘어나는 TextView 흐르게 처리. 3.공통 - 화면 비율에 따라 보이지 않는 부분을 ScrollView로 처리. 4.NavigationView - 스토리보드에 맞게 수정. 5.Event - 종료된 이벤트에서 참여하기 버튼 보이지 않게 수정. 6.MyGroup - 뭉쳐져있는 코드들을 함수형으로 분할하여 보기쉽게 처리. 7.MainFragment - 이벤트 ViewPager에서 슬라이드할때 글귀 바뀌게 수정. 8.MyPage - 이메일 변경하기 , 비밀번호 변경하기 , 전화번호 변경하기 기능추가. 9.MyGroup_Edit - 그룹명 변경 시 변경되지 않는 현상을 변경되게 수정.
----예정 사항----
1.아이디 찾기 기능 구현 + API 연동 예정
2.비밀번호 찾기 기능 구현 + API 연동 예정
3.환불하기 기능 구현 예정 + API 연동 예정
4.각종 Warning 현상 나오지 않게 끔 작업 예정
5.중복 코드 , 필요없는 코드 제거 (안정화) 작업 예정

--- a/app/src/main/res/layout/activity_my_page_change_email.xml
+++ b/app/src/main/res/layout/activity_my_page_change_email.xml
@@ -51,6 +51,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <View
+                android:id="@+id/vCancel"
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
                 app:layout_constraintRight_toRightOf="parent" />
@@ -90,15 +91,15 @@
                 app:layout_constraintLeft_toLeftOf="parent" />
 
 
-            <EditText
-                android:id="@+id/etMyEmail"
+            <TextView
+                android:id="@+id/tvMyEmail"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginTop="6.85dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvEmailText"
-                android:hint="기존 이메일 주소를 입력하세요."
+                android:gravity="center_vertical"
                 android:paddingLeft="12.28dp"
                 android:textSize="13.71dp"
                 android:fontFamily="@font/malgunfont"
@@ -116,7 +117,7 @@
                 android:textColor="#1e1e1e"
                 android:textSize="13.71dp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@+id/etMyEmail"
+                app:layout_constraintTop_toBottomOf="@+id/tvMyEmail"
                 app:layout_constraintLeft_toLeftOf="parent" />
 
             <EditText
@@ -125,6 +126,7 @@
                 android:layout_height="48dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
+                android:inputType="textEmailAddress"
                 android:layout_marginTop="6.85dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvNewEmailText"
                 android:hint="신규 이메일 주소를 입력하세요."
@@ -158,6 +160,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvNewEmailCheckText"
                 android:hint="신규 이메일 주소를 다시한번 입력하세요."
                 android:paddingLeft="12.28dp"
+                android:inputType="textEmailAddress"
                 android:textSize="13.71dp"
                 android:fontFamily="@font/malgunfont"
                 android:includeFontPadding="false"
@@ -185,7 +188,8 @@
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginTop="6.85dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvPassword"
-                android:hint="신규 이메일 주소를 다시한번 입력하세요."
+                android:hint="비밀번호를 입력하세요."
+                android:inputType="textPassword"
                 android:paddingLeft="12.28dp"
                 android:textSize="13.71dp"
                 android:fontFamily="@font/malgunfont"
@@ -193,9 +197,11 @@
                 android:background="#ffffff"/>
 
             <Button
+                android:id="@+id/btChange"
                 android:layout_width="match_parent"
                 android:layout_height="47.42dp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="17.14dp"
                 android:background="@color/buttonSelect"
                 android:text="변경하기"
                 android:textColor="#ffffff"
