--- a/app/src/main/res/layout/activity_my_page_change_password.xml
+++ b/app/src/main/res/layout/activity_my_page_change_password.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="passwordActivity"
-            type="com.dutch.hdh.dutchpayapp.ui.mypage.change_password.MyPage_ChangePasswordActivity"/>
+            type="com.dutch.hdh.dutchpayapp.ui.mypage.change_password.MyPage_ChangePasswordActivity" />
     </data>
 
 
@@ -51,6 +52,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <View
+                android:id="@+id/vCancel"
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
                 app:layout_constraintRight_toRightOf="parent" />
@@ -68,8 +70,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginLeft="17.14dp"
-            android:layout_marginRight="17.14dp"
             android:layout_marginTop="28.85dp"
+            android:layout_marginRight="17.14dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -83,6 +85,7 @@
                 android:fontFamily="@font/malgunfont"
                 android:includeFontPadding="false"
                 android:text="현재 비밀번호"
+
                 android:textColor="#1e1e1e"
                 android:textSize="13.71dp"
                 android:textStyle="bold"
@@ -93,16 +96,17 @@
                 android:id="@+id/etMyPassword"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginTop="6.85dp"
-                app:layout_constraintTop_toBottomOf="@+id/tvMyPassword"
-                android:hint="기존 비밀번호를를 입력하세요."
+                android:background="#ffffff"
+                android:fontFamily="@font/malgunfont"
+                android:hint="기존 비밀번호를 입력하세요."
+                android:includeFontPadding="false"
+                android:inputType="textPassword"
                 android:paddingLeft="12.28dp"
                 android:textSize="13.71dp"
-                android:fontFamily="@font/malgunfont"
-                android:includeFontPadding="false"
-                android:background="#ffffff"/>
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvMyPassword" />
 
             <TextView
                 android:id="@+id/tvNewPassword"
@@ -115,23 +119,25 @@
                 android:textColor="#1e1e1e"
                 android:textSize="13.71dp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@+id/etMyPassword"
-                app:layout_constraintLeft_toLeftOf="parent" />
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/etMyPassword" />
 
             <EditText
                 android:id="@+id/etNewPassword"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginTop="6.85dp"
-                app:layout_constraintTop_toBottomOf="@+id/tvNewPassword"
+                android:background="#ffffff"
+                android:fontFamily="@font/malgunfont"
+
                 android:hint="신규 비밀번호를 입력하세요."
+                android:includeFontPadding="false"
+                android:inputType="textPassword"
                 android:paddingLeft="12.28dp"
                 android:textSize="13.71dp"
-                android:fontFamily="@font/malgunfont"
-                android:includeFontPadding="false"
-                android:background="#ffffff"/>
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvNewPassword" />
 
             <TextView
                 android:id="@+id/tvNewPasswordCheck"
@@ -144,36 +150,39 @@
                 android:textColor="#1e1e1e"
                 android:textSize="13.71dp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@+id/etNewPassword"
-                app:layout_constraintLeft_toLeftOf="parent" />
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />
 
             <EditText
                 android:id="@+id/etNewPasswordCheck"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginTop="6.85dp"
-                app:layout_constraintTop_toBottomOf="@+id/tvNewPasswordCheck"
+                android:background="#ffffff"
+                android:fontFamily="@font/malgunfont"
                 android:hint="신규 비밀번호를 다시한번 입력하세요."
+                android:includeFontPadding="false"
+                android:inputType="textPassword"
                 android:paddingLeft="12.28dp"
                 android:textSize="13.71dp"
-                android:fontFamily="@font/malgunfont"
-                android:includeFontPadding="false"
-                android:background="#ffffff"/>
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvNewPasswordCheck" />
 
 
             <Button
+                android:id="@+id/btChange"
                 android:layout_width="match_parent"
                 android:layout_height="47.42dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="17.14dp"
                 android:background="@color/buttonSelect"
+                android:fontFamily="@font/malgunfont"
+                android:includeFontPadding="false"
                 android:text="변경하기"
                 android:textColor="#ffffff"
                 android:textSize="18dp"
                 android:textStyle="bold"
-                android:fontFamily="@font/malgunfont"
-                android:includeFontPadding="false"/>
+                app:layout_constraintBottom_toBottomOf="parent" />
         </android.support.constraint.ConstraintLayout>
 
 
