--- a/app/src/main/res/layout/custom_navigation_item.xml
+++ b/app/src/main/res/layout/custom_navigation_item.xml
@@ -55,17 +55,23 @@
                 app:layout_constraintTop_toBottomOf="@+id/image_exit" />
 
             <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
+                android:id="@+id/tvNameTitle"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="7dp"
                 android:layout_marginTop="2dp"
-                android:text="에 오신것을 환영합니다"
+                android:text="에 오신것을 환영합니다."
+                android:singleLine="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:ellipsize="marquee"
+                android:focusableInTouchMode="true"
+                android:focusable="true"
                 android:textColor="#afd3ff"
                 android:textSize="14.85dp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                 app:layout_constraintLeft_toRightOf="@+id/imageView4"
-                app:layout_constraintTop_toTopOf="@+id/imageView4" />
+                app:layout_constraintTop_toTopOf="@+id/imageView4"
+                app:layout_constraintRight_toRightOf="parent"/>
 
 
             <LinearLayout
