--- a/app/src/main/res/layout/fragment_event_detail.xml
+++ b/app/src/main/res/layout/fragment_event_detail.xml
@@ -8,34 +8,64 @@
         android:layout_height="match_parent"
         android:background="#ffffff">
 
+        <ScrollView
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btEventJoin">
 
-        <TextView
-            android:id="@+id/tvEventTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="17.14dp"
-            android:layout_marginTop="34.57dp"
-            android:layout_marginRight="17.14dp"
-            android:fontFamily="@font/malgunfont"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:includeFontPadding="false"
-            android:text="아이유와 함께 하는 더차피에 할인 이벤트"
-            android:textSize="18.28dp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent" />
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/dutchpay_event"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:scaleType="fitXY"
-            android:layout_marginTop="7.42dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvEventTitle" />
+                <TextView
+                    android:id="@+id/tvEventTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="17.14dp"
+                    android:layout_marginTop="34.57dp"
+                    android:layout_marginRight="17.14dp"
+                    android:fontFamily="@font/malgunfont"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:includeFontPadding="false"
+                    android:text="아이유와 함께 하는 더치페이 할인 이벤트"
+                    android:textSize="18.28dp"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/ivEventImage"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/dutchpay_event"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:scaleType="fitXY"
+                    android:layout_marginTop="7.42dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvEventTitle" />
+
+                <TextView
+                    android:id="@+id/tvEventContent"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="17.14dp"
+                    android:layout_marginTop="26.57dp"
+                    android:textColor="#010101"
+                    android:textSize="10dp"
+                    android:text="아이유와 함께하는 더치페이 할인 이벤트"
+                    android:layout_marginRight="17.14dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/ivEventImage"/>
+
+            </android.support.constraint.ConstraintLayout>
+
+        </ScrollView>
 
 
         <Button
+            android:id="@+id/btEventJoin"
             android:layout_width="match_parent"
             android:layout_height="47.42dp"
             android:background="#ffd336"
@@ -43,6 +73,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginLeft="17.14dp"
             android:layout_marginRight="17.14dp"
+            android:textStyle="bold"
+            android:textColor="#010101"
+            android:fontFamily="@font/malgunfont"
+            android:includeFontPadding="false"
             android:layout_marginBottom="17.14dp"
             android:textSize="20dp"
             />
