--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -106,11 +106,17 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/tvTitle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:singleLine="true"
                             android:fontFamily="@font/malgunfont"
                             android:text="@string/welcome_logoText"
                             android:textColor="#ffffff"
+                            android:ellipsize="marquee"
+                            android:marqueeRepeatLimit="marquee_forever"
+                            android:focusable="true"
+                            android:focusableInTouchMode="true"
                             android:textSize="25.8dp"
                             android:textStyle="bold" />
 
@@ -151,16 +157,25 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:id="@+id/tvEventTitle"
+                                android:layout_width="0dp"
+                                android:layout_weight="7"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/malgunfont"
                                 android:text="@string/welcome_eventTitle"
+                                android:singleLine="true"
+                                android:focusable="true"
+                                android:focusableInTouchMode="true"
+                                android:marqueeRepeatLimit="marquee_forever"
+                                android:ellipsize="marquee"
                                 android:textColor="#383838"
                                 android:textSize="15.42dp"
                                 android:textStyle="bold" />
 
                             <LinearLayout
-                                android:layout_width="match_parent"
+                                android:id="@+id/llAllEvent"
+                                android:layout_width="0dp"
+                                android:layout_weight="2"
                                 android:layout_height="wrap_content"
                                 android:gravity="right">
 
